--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "pusher/pusher-php-server": "~3.0"
+        "laravel/ui": "^2.1",
+        "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "^4.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
